--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="header">
-    <div class="header_nav_box">
+    <div class="header_nav_box" id="header_nav_box">
         <div class="nav_head head_first"><p class="head_p head_first_p">01</p><h2 class="head_h2 head_first_h">Game</h2></div>
         <div class="nav_head head_first"><p class="head_p head_first_p">02</p><h2 class="head_h2 head_first_h">Slider</h2></div>
         <div class="nav_head head_first"><p class="head_p head_first_p">03</p><h2 class="head_h2 head_first_h">Snickers store</h2></div>
@@ -32,8 +32,28 @@
             </div>
         </div>
         <div class="section_box section_box_second"></div>
-        <div class="section_box section_box_third"></div>
-        <div class="section_box section_box_fourth"></div>
+        <div class="section_box section_box_third">
+            <div class="section_box_third_cover" id="section_box_third_cover">
+                <div class="box_third_content"></div>
+            </div>
+            <div class="box_third_ipad" id="box_third_ipad">
+                <div class="box_third_ipad_cover"></div>
+            </div>
+            <div class="box_third_iphone" id="box_third_iphone">
+                <div class="box_third_iphone_cover"></div>
+            </div>
+        </div>
+        <div class="section_box section_box_fourth">
+            <div class="section_box_fourth_cover" id="section_box_fourth_cover">
+                <div class="box_fourth_content"></div>
+            </div>
+            <div class="box_fourth_ipad" id="box_fourth_ipad">
+                <div class="box_fourth_ipad_cover"></div>
+            </div>
+            <div class="box_fourth_iphone" id="box_fourth_iphone">
+                <div class="box_fourth_iphone_cover"></div>
+            </div>
+        </div>
         <div class="section_box section_box_fifth"></div>
     </section>
 </div>
