--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <div class="header_nav_box" id="header_nav_box">
         <div class="nav_head head_first"><p class="head_p head_first_p">01</p><h2 class="head_h2 head_first_h">Game</h2></div>
         <div class="nav_head head_first"><p class="head_p head_first_p">02</p><h2 class="head_h2 head_first_h">Slider</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">03</p><h2 class="head_h2 head_first_h">Snickers store</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">03</p><h2 class="head_h2 head_first_h">Sneakers store</h2></div>
         <div class="nav_head head_first"><p class="head_p head_first_p">04</p><h2 class="head_h2 head_first_h">Restaurant</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">05</p><h2 class="head_h2 head_first_h">Soon</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">05</p><h2 class="head_h2 head_first_h">Git</h2></div>
     </div>
 
     <section class="section_content">
@@ -54,8 +54,24 @@
                 <div class="box_fourth_iphone_cover"></div>
             </div>
         </div>
-        <div class="section_box section_box_fifth"></div>
+        <div class="section_box section_box_fifth">
+            <div class="git_link_box" id="git_link_box">
+                <h2 class="git">Game Git</h2>
+                <h2 class="git">Slider Git</h2>
+                <h2 class="git">Sneakers Git</h2>
+                <h2 class="git">Restaurant Git</h2>
+                <h2 class="git">Soon ...</h2>
+            </div>
+        </div>
     </section>
+
+<!--    <div class="git_link_box" id="git_link_box">-->
+<!--        <h2 class="git">Game Git</h2>-->
+<!--        <h2 class="git">Slider Git</h2>-->
+<!--        <h2 class="git">Sneakers Git</h2>-->
+<!--        <h2 class="git">Restaurant Git</h2>-->
+<!--        <h2 class="git">Soon ...</h2>-->
+<!--    </div>-->
 </div>
 
 </body>
