--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -14,12 +16,12 @@
         <div class="nav_head head_first"><p class="head_p head_first_p">02</p><h2 class="head_h2 head_first_h">Slider</h2></div>
         <div class="nav_head head_first"><p class="head_p head_first_p">03</p><h2 class="head_h2 head_first_h">Sneakers store</h2></div>
         <div class="nav_head head_first"><p class="head_p head_first_p">04</p><h2 class="head_h2 head_first_h">Restaurant</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">05</p><h2 class="head_h2 head_first_h">Git</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">05</p><h2 class="head_h2 head_first_h">Links of Git</h2></div>
     </div>
 
     <section class="section_content">
         <div class="section_box section_box_first">
-            <div class="section_box_cover">
+            <div class="section_box_cover" id="linkOfGame">
                 <div class="card "></div>
                 <div class="card "></div>
                 <div class="card "></div>
@@ -31,10 +33,10 @@
                 <div class="section_box_cover_inside"></div>
             </div>
         </div>
-        <div class="section_box section_box_second"></div>
+        <div class="section_box section_box_second" id="linkOfSlider"></div>
         <div class="section_box section_box_third">
             <div class="section_box_third_cover" id="section_box_third_cover">
-                <div class="box_third_content"></div>
+                <div class="box_third_content" id="linkOfSnikers"></div>
             </div>
             <div class="box_third_ipad" id="box_third_ipad">
                 <div class="box_third_ipad_cover"></div>
@@ -45,7 +47,7 @@
         </div>
         <div class="section_box section_box_fourth">
             <div class="section_box_fourth_cover" id="section_box_fourth_cover">
-                <div class="box_fourth_content"></div>
+                <div class="box_fourth_content" id="linkOfRestaurant"></div>
             </div>
             <div class="box_fourth_ipad" id="box_fourth_ipad">
                 <div class="box_fourth_ipad_cover"></div>
@@ -56,10 +58,10 @@
         </div>
         <div class="section_box section_box_fifth">
             <div class="git_link_box" id="git_link_box">
-                <h2 class="git">Game Git</h2>
-                <h2 class="git">Slider Git</h2>
-                <h2 class="git">Sneakers Git</h2>
-                <h2 class="git">Restaurant Git</h2>
+                <h2 class="git" id="gitGame">Game Git</h2>
+                <h2 class="git" id="gitSlider">Slider Git</h2>
+                <h2 class="git" id="gitSneakers" >Sneakers Git</h2>
+                <h2 class="git" id="gitRestaurant">Restaurant Git</h2>
                 <h2 class="git">Soon ...</h2>
             </div>
         </div>
@@ -72,7 +74,11 @@
 <!--        <h2 class="git">Restaurant Git</h2>-->
 <!--        <h2 class="git">Soon ...</h2>-->
 <!--    </div>-->
+
+
 </div>
+
+
 
 </body>
 </html>
