--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,18 @@
 
 </head>
 <body>
-
 <div class="header">
     <div class="header_nav_box" id="header_nav_box">
-        <div class="nav_head head_first"><p class="head_p head_first_p">01</p><h2 class="head_h2 head_first_h">Game</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">02</p><h2 class="head_h2 head_first_h">Slider</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">03</p><h2 class="head_h2 head_first_h">Sneakers store</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">04</p><h2 class="head_h2 head_first_h">Restaurant</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">05</p><h2 class="head_h2 head_first_h">Links of Git</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">01</p>
+            <h2 class="head_h2 head_first_h">Game</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">02</p>
+            <h2 class="head_h2 head_first_h">Slider</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">03</p>
+            <h2 class="head_h2 head_first_h">Sneakers store</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">04</p>
+            <h2 class="head_h2 head_first_h">Restaurant</h2></div>
+        <div class="nav_head head_first"><p class="head_p head_first_p">05</p>
+            <h2 class="head_h2 head_first_h">Links of Git</h2></div>
     </div>
 
     <section class="section_content">
@@ -60,24 +64,14 @@
             <div class="git_link_box" id="git_link_box">
                 <h2 class="git" id="gitGame">Game Git</h2>
                 <h2 class="git" id="gitSlider">Slider Git</h2>
-                <h2 class="git" id="gitSneakers" >Sneakers Git</h2>
+                <h2 class="git" id="gitSneakers">Sneakers Git</h2>
                 <h2 class="git" id="gitRestaurant">Restaurant Git</h2>
                 <h2 class="git">Soon ...</h2>
             </div>
         </div>
     </section>
-
-<!--    <div class="git_link_box" id="git_link_box">-->
-<!--        <h2 class="git">Game Git</h2>-->
-<!--        <h2 class="git">Slider Git</h2>-->
-<!--        <h2 class="git">Sneakers Git</h2>-->
-<!--        <h2 class="git">Restaurant Git</h2>-->
-<!--        <h2 class="git">Soon ...</h2>-->
-<!--    </div>-->
-
-
+    <p class="founder">Welcome to my CV page. Best wishes Makarov Denis</p>
 </div>
-
 
 
 </body>
