add react project

--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,44 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet">
 
 </head>
 <body>
 <div class="header">
     <div class="header_nav_box" id="header_nav_box">
-        <div class="nav_head head_first"><p class="head_p head_first_p">01</p>
-            <h2 class="head_h2 head_first_h">Game</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">02</p>
-            <h2 class="head_h2 head_first_h">Slider</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">03</p>
-            <h2 class="head_h2 head_first_h">Sneakers store</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">04</p>
-            <h2 class="head_h2 head_first_h">Restaurant</h2></div>
-        <div class="nav_head head_first"><p class="head_p head_first_p">05</p>
-            <h2 class="head_h2 head_first_h">Links of Git</h2></div>
+
+        <div class="nav_head head_first">
+            <p class="head_p head_first_p">02</p>
+            <h2 class="head_h2 head_first_h">Game</h2>
+        </div>
+        <div class="nav_head head_first">
+            <p class="head_p head_first_p">03</p>
+            <h2 class="head_h2 head_first_h">Slider</h2>
+        </div>
+        <div class="nav_head head_first">
+            <p class="head_p head_first_p">04</p>
+            <h2 class="head_h2 head_first_h">Sneakers store</h2>
+        </div>
+        <div class="nav_head head_first">
+            <p class="head_p head_first_p">05</p>
+            <h2 class="head_h2 head_first_h">Restaurant</h2>
+        </div>
+
+        <div class="nav_head head_first">
+            <p class="head_p head_first_p">06</p>
+            <h2 class="head_h2 head_first_h">React - Redux </h2>
+        </div>
+
+        <div class="nav_head head_first">
+            <p class="head_p head_first_p">07</p>
+            <h2 class="head_h2 head_first_h">Links of Git</h2>
+        </div>
+
     </div>
 
     <section class="section_content">
+
         <div class="section_box section_box_first">
             <div class="section_box_cover" id="linkOfGame">
                 <div class="card "></div>
@@ -37,10 +55,12 @@
                 <div class="section_box_cover_inside"></div>
             </div>
         </div>
-        <div class="section_box section_box_second" id="linkOfSlider"></div>
+        <div class="section_box section_box_second" id="linkOfSlider">
+
+        </div>
         <div class="section_box section_box_third">
             <div class="section_box_third_cover" id="section_box_third_cover">
-                <div class="box_third_content" id="linkOfSnikers"></div>
+                <div class="box_third_content" id="linkOfSneakers"></div>
             </div>
             <div class="box_third_ipad" id="box_third_ipad">
                 <div class="box_third_ipad_cover"></div>
@@ -60,17 +80,36 @@
                 <div class="box_fourth_iphone_cover"></div>
             </div>
         </div>
+
+
+        <div class="section_box section_box_react">
+            <div class="section_box_react_cover" id="linkOfReact">
+                <div class="section_box_cover_inside"></div>
+            </div>
+            <div class="box_react_ipad" id="box_react_ipad">
+                <div class="box_react_ipad_cover"></div>
+            </div>
+            <div class="box_react_iphone" id="box_react_iphone">
+                <div class="box_react_iphone_cover"></div>
+            </div>
+        </div>
+
+
         <div class="section_box section_box_fifth">
             <div class="git_link_box" id="git_link_box">
                 <h2 class="git" id="gitGame">Game Git</h2>
                 <h2 class="git" id="gitSlider">Slider Git</h2>
                 <h2 class="git" id="gitSneakers">Sneakers Git</h2>
                 <h2 class="git" id="gitRestaurant">Restaurant Git</h2>
-                <h2 class="git">Soon ...</h2>
+                <h2 class="git" id="gitReact">React Redux</h2>
             </div>
         </div>
+
+
+
+
     </section>
-    <p class="founder">Welcome to my CV page. Best wishes Makarov Denis</p>
+    <p class="founder">Welcome to my CV page. Best wishes Makarov Denys</p>
 </div>
 
 
